[gd_scene load_steps=6 format=3 uid="uid://b0hjee3bw5mrw"]

[ext_resource type="Theme" uid="uid://dblqbcjvfvwwx" path="res://assets/font,themes/ui_theme_16.tres" id="1_a2roq"]
[ext_resource type="Script" uid="uid://cyjixqy1wirm7" path="res://ui/start_screen/start_screen.gd" id="1_j518t"]
[ext_resource type="PackedScene" uid="uid://di5pg5ab0mckm" path="res://ui/settings_screen/SettingsScreen.tscn" id="2_mtvo4"]
[ext_resource type="PackedScene" uid="uid://xmvrvw8swdhe" path="res://ui/containers/stats_container.tscn" id="4_73eb4"]
[ext_resource type="PackedScene" uid="uid://dy7ev3lgjvve1" path="res://ui/containers/talo_leaderboard_container.tscn" id="5_cthws"]

[node name="StartScreen" type="CanvasLayer" groups=["ui_screen"]]
script = ExtResource("1_j518t")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_a2roq")

[node name="SettingsContainer" parent="Control" instance=ExtResource("2_mtvo4")]
visible = false
layout_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
custom_minimum_size = Vector2(200, 120)
layout_mode = 2
theme = ExtResource("1_a2roq")

[node name="TitleLabel" type="Label" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Trials"

[node name="NewGameButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="SettingsButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="StatsButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Stats"

[node name="LeaderboardButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Leaderboard"

[node name="QuitButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="StatsContainer" parent="Control" instance=ExtResource("4_73eb4")]
layout_mode = 1

[node name="TaloLeaderboardContainer" parent="Control" instance=ExtResource("5_cthws")]
layout_mode = 1

[node name="VersionLabel" type="Label" parent="Control"]
layout_mode = 2
offset_left = 2.0
offset_top = 275.0
offset_right = 58.0
offset_bottom = 301.0
text = "v0.1.0"
